# lostcoast

./: .gitignore  Cargo.toml  README.md
assets/scenes/: clear.json  cornell.json  cube.json  triangle.json
crates/app/: Cargo.toml
crates/app/src/: input.rs  main.rs  stats.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  sidecar.rs
crates/core/: Cargo.toml
crates/core/src/: ambient_cube.rs  lib.rs  lightmap_uv.rs  math.rs  rnm_basis.rs  scene.rs
crates/core/tests/: ambient_cube_n2.rs  half_lambert.rs
crates/gfx/: Cargo.toml  build.rs
crates/gfx/src/: app_gfx.rs  buffer.rs  camera.rs  cornell.rs  descriptor.rs  device.rs  instance.rs  lib.rs  mesh.rs  offscreen.rs  overlay.rs  pipeline.rs  shader.rs  swapchain.rs  sync.rs  texture.rs  world_pass.rs  world_pipeline.rs
crates/harness/: Cargo.toml  README.md  stages.toml
crates/harness/scripts/: approve_reference.sh  loop.sh  loop_prompt.md  run_with_validation.sh
crates/harness/src/: lib.rs
crates/lightbaker/: Cargo.toml
crates/lightbaker/src/: bvh.rs  cubemap.rs  direct.rs  hdr.rs  lib.rs  main.rs  phong.rs  radiosity.rs  raycast.rs  rnm.rs  scene.rs
crates/lightbaker/tests/: closed_box_energy.rs  cubemap.rs  direct.rs  hdr.rs  phong.rs  rnm_flat_plane.rs
crates/renderer/: Cargo.toml
shaders/: common.glsl  cornell.frag  cornell.vert  triangle.vert  world.frag  world.vert
