[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/assets",
    "crates/lightbaker",
    "crates/gfx",
    "crates/renderer",
    "crates/app",
    "crates/harness",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
glam = { version = "0.32", features = ["bytemuck"] }
gltf = "1.4"
gpu-allocator = "0.27"
winit = "0.30"
shaderc = "0.9"
embree4-rs = "0.0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6"
mikktspace = "0.3"
naga = "0.20"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
raw-window-handle = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bake]
inherits = "release"
debug = true
