[package]
name = "gfx"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lostcoast-core = { path = "../core" }
glam = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
raw-window-handle = { workspace = true }
